--- a/src/.jshintrc
+++ b/src/.jshintrc
@@ -5,27 +5,17 @@
         "nokia": true
     },
 
-    "node" : false,
-    "es5" : false,
-    "browser" : true,
-
-    "boss" : false,
     "curly": true,
-    "debug": false,
-    "devel": false,
     "eqeqeq": true,
-    "evil": true,
     "forin": true,
+    "indent": 4,
+    "multistr": true,
     "noarg": true,
-    "noempty": false,
-    "nonew": false,
-    "nomen": false,
-    "onevar": true,
-    "plusplus": false,
-    "regexp": false,
+    "node": true,
+    "noempty": true,
+    "strict": true,
+    "trailing": true,
     "undef": true,
-    "sub": true,
-    "strict": false,
-    "white": false,
-    "unused": true
+    "unused": true,
+    "white": false
 }
