Changed way in which unit tests are run.
Injectors are added on the fly, they aren't in the source
code of jHERE anymore.

`make test` runs tests with *phantom js* using a console reporter.

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "license": "MIT",
   "devDependencies": {
     "uglify-js": "1.3.4",
-    "jshint": "0.9.1"
+    "jshint": "0.9.1",
+    "phantom-jasmine": "0.1.0"
   }
 }
