--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jHERE",
-  "version": "0.9.0",
+  "version": "1.0.0",
   "description": "Maps made simple.",
   "main": "index.js",
   "directories": {
@@ -24,6 +24,10 @@
   "devDependencies": {
     "uglify-js": "1.3.4",
     "jshint": "0.9.1",
-    "phantom-jasmine": "0.1.0"
+    "phantom-jasmine": "0.1.0",
+    "grunt": "^0.4.5",
+    "grunt-contrib-uglify": "^0.9.1",
+    "grunt-contrib-jshint": "^0.11.2",
+    "load-grunt-tasks": "^3.2.0"
   }
 }
