--- a/package.json
+++ b/package.json
@@ -22,12 +22,18 @@
   "author": "Massimiliano Marcon (@mmarcon)",
   "license": "MIT",
   "devDependencies": {
-    "uglify-js": "1.3.4",
-    "jshint": "0.9.1",
-    "phantom-jasmine": "0.1.0",
+    "babel-core": "^5.8.22",
+    "babel-loader": "^5.3.2",
     "grunt": "^0.4.5",
-    "grunt-contrib-uglify": "^0.9.1",
+    "grunt-babel": "^5.0.1",
     "grunt-contrib-jshint": "^0.11.2",
-    "load-grunt-tasks": "^3.2.0"
+    "grunt-contrib-uglify": "^0.9.1",
+    "grunt-webpack": "^1.0.11",
+    "jshint": "0.9.1",
+    "load-grunt-tasks": "^3.2.0",
+    "phantom-jasmine": "0.1.0",
+    "uglify-js": "1.3.4",
+    "webpack": "^1.11.0",
+    "webpack-dev-server": "^1.10.1"
   }
 }
