--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jHERE",
-  "version": "1.0.0",
+  "version": "1.0.0-beta.1",
   "description": "Maps made easy.",
   "main": "index.js",
   "directories": {
@@ -26,6 +26,7 @@
     "babel-loader": "^5.3.2",
     "grunt": "^0.4.5",
     "grunt-babel": "^5.0.1",
+    "grunt-contrib-compress": "^0.13.0",
     "grunt-contrib-jshint": "^0.11.2",
     "grunt-contrib-uglify": "^0.9.1",
     "grunt-doxdox": "mmarcon/grunt-doxdox",
