--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "grunt-contrib-jshint": "^0.11.2",
     "grunt-contrib-uglify": "^0.9.1",
     "grunt-doxdox": "mmarcon/grunt-doxdox",
+    "grunt-text-replace": "^0.4.0",
     "grunt-webpack": "^1.0.11",
     "jshint": "0.9.1",
     "load-grunt-tasks": "^3.2.0",
